--- a/tool/generator.html
+++ b/tool/generator.html
@@ -63,7 +63,7 @@
                         <option value="fueloil">Fuel Oil (kg)</option>
                         <option value="coal_imp">İthal Kömür (kg)</option>
                         <option value="coal_loc">Yerli Kömür (kg)</option>
-                        <option value="manual" class="text-red-600 font-bold">⚡ Manuel / Özel Yakıt</option>
+                        <option value="manual" class="text-red-600 font-bold">⚡ Paçal Kömür / Özel</option>
                     </select>
                 </div>
                 <div>
@@ -72,19 +72,20 @@
                 </div>
             </div>
 
-            <div id="manualFuelFields" class="hidden bg-slate-50 p-3 rounded-xl border border-slate-200 grid grid-cols-3 gap-2 animate-[fadeIn_0.3s_ease-out]">
-                <div class="col-span-1">
+            <div id="manualFuelFields" class="hidden bg-slate-50 p-3 rounded-xl border border-slate-200 grid grid-cols-2 gap-2 animate-[fadeIn_0.3s_ease-out]">
+                <div class="col-span-2">
                     <label class="text-[9px] font-bold text-slate-400 uppercase">Yakıt Adı</label>
-                    <input type="text" id="customFuelLabel" placeholder="Örn: Pelet" class="w-full bg-white border border-slate-200 rounded-lg px-2 py-1.5 text-xs font-bold text-slate-700 outline-none">
+                    <input type="text" id="customFuelLabel" placeholder="Örn: Paçal Kömür" class="w-full bg-white border border-slate-200 rounded-lg px-2 py-1.5 text-xs font-bold text-slate-700 outline-none">
                 </div>
-                <div class="col-span-1">
-                    <label class="text-[9px] font-bold text-slate-400 uppercase">Birim</label>
-                    <input type="text" id="customFuelUnit" placeholder="kg" class="w-full bg-white border border-slate-200 rounded-lg px-2 py-1.5 text-xs font-bold text-slate-700 outline-none">
+                <div>
+                    <label class="text-[9px] font-bold text-slate-400 uppercase">Kalori (kcal/kg)</label>
+                    <input type="number" id="customFuelLhv" placeholder="4500" class="w-full bg-white border border-slate-200 rounded-lg px-2 py-1.5 text-xs font-bold text-slate-700 outline-none">
                 </div>
-                <div class="col-span-1">
+                <div>
                     <label class="text-[9px] font-bold text-slate-400 uppercase">CO2 (kg/br)</label>
-                    <input type="number" id="customFuelCo2" placeholder="0.3" step="0.001" class="w-full bg-white border border-slate-200 rounded-lg px-2 py-1.5 text-xs font-bold text-slate-700 outline-none">
+                    <input type="number" id="customFuelCo2" placeholder="0.36" step="0.001" class="w-full bg-white border border-slate-200 rounded-lg px-2 py-1.5 text-xs font-bold text-slate-700 outline-none">
                 </div>
+                <input type="hidden" id="customFuelUnit" value="kg">
             </div>
             
             <div>
@@ -118,6 +119,10 @@
             const manualFields = document.getElementById('manualFuelFields');
             if(fuelSelect === 'manual') {
                 manualFields.classList.remove('hidden');
+                // Varsayılan Paçal Değerlerini Ata
+                document.getElementById('customFuelLabel').value = "Paçal Kömür";
+                document.getElementById('customFuelCo2').value = "0.36"; // Kömür ortalaması
+                document.getElementById('customFuelLhv').value = ""; // Kullanıcı girsin
             } else {
                 manualFields.classList.add('hidden');
             }
@@ -143,11 +148,17 @@
             const baseUrl = "https://optimizi.app/track.html";
             let finalUrl = `${baseUrl}?c=${encodeURIComponent(client)}&s=${encodeURIComponent(serial)}&v=${totalVal}&up=${uPrice}&wh=${wHours}&f=${fuel}&d=${fullDateTime}`;
 
-            // EĞER MANUEL SEÇİLDİYSE EK PARAMETRELERİ EKLE
+            // MANUEL / PAÇAL SEÇİLDİYSE
             if(fuel === 'manual') {
-                const cLabel = document.getElementById('customFuelLabel').value || 'Özel Yakıt';
-                const cUnit = document.getElementById('customFuelUnit').value || 'br';
-                const cCo2 = document.getElementById('customFuelCo2').value || '0.3';
+                let cLabel = document.getElementById('customFuelLabel').value || 'Paçal Kömür';
+                const cUnit = document.getElementById('customFuelUnit').value || 'kg';
+                const cCo2 = document.getElementById('customFuelCo2').value || '0.36';
+                const cLhv = document.getElementById('customFuelLhv').value;
+
+                // Eğer kalori girildiyse ismin yanına (4500 kcal) gibi ekle
+                if(cLhv) {
+                    cLabel += ` (${cLhv} kcal)`;
+                }
                 
                 finalUrl += `&fl=${encodeURIComponent(cLabel)}&fu=${encodeURIComponent(cUnit)}&fc=${encodeURIComponent(cCo2)}`;
             }
