--- a/tool/roi.html
+++ b/tool/roi.html
@@ -1254,5 +1254,7 @@
         }catch(e){ alert('Rapor oluşturulurken hata oluştu: ' + e.message); console.error(e); }
     }
 </script>
+  <script src="guard.js"></script>
 </body>
 </html>
+
