--- a/tool/roi.html
+++ b/tool/roi.html
@@ -1254,7 +1254,8 @@
         }catch(e){ alert('Rapor oluşturulurken hata oluştu: ' + e.message); console.error(e); }
     }
 </script>
-  <script src="guard.js"></script>
+  <script src="guard.js?v=2"></script>
 </body>
 </html>
+
 
