--- a/tool/roi-3.html
+++ b/tool/roi-3.html
@@ -1835,5 +1835,6 @@
         }catch(e){ alert('Rapor oluşturulurken hata oluştu: ' + e.message); console.error(e); }
     }
 </script>
+  <script src="guard.js?v=2"></script>
 </body>
 </html>
