--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -132,7 +132,7 @@
     <nav class="sticky top-0 z-50 glass-card !bg-white/90 dark:!bg-slate-900/80 !border-x-0 !border-t-0 !rounded-none border-b border-slate-200 dark:border-white/10 backdrop-blur-xl">
       <div class="app-container px-6 h-16 flex items-center justify-between">
           <a href="../index.html" class="flex items-center gap-3 group">
-              <div><h1 class="text-lg font-bold text-slate-800 dark:text-white tracking-wide">Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-orange-500">.Audit</span></h1></div>
+              <div><h1 class="text-lg font-bold text-slate-800 dark:text-white tracking-wide">Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-orange-500">.Anlık Kayıp</span></h1></div>
           </a>
           <div class="flex items-center gap-3">
               <div class="hidden md:flex items-center gap-2 px-3 py-1.5 rounded-full bg-slate-100 dark:bg-slate-800/50 border border-slate-200 dark:border-slate-700/50 text-xs text-slate-500 dark:text-slate-300">
@@ -939,5 +939,7 @@
         }catch(e){ alert('Rapor hatası: ' + e.message); console.error(e); }
     }
 </script>
+<script src="guard.js?v=2"></script>
 </body>
 </html>
+
