--- a/tool/chiller-roi.html
+++ b/tool/chiller-roi.html
@@ -841,5 +841,7 @@
     
     window.addEventListener('load', () => { setTimeout(lucide.createIcons, 500); });
 </script>
+<script src="guard.js?v=2"></script>
 </body>
 </html>
+
