--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -1050,5 +1050,7 @@
         }catch(e){ alert('Rapor hatası: ' + e.message); console.error(e); }
     }
 </script>
+  <script src="guard.js?v=2"></script>
 </body>
 </html>
+
