--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -409,7 +409,7 @@
             <div class="absolute top-0 right-0 w-64 h-64 bg-red-600 rounded-full blur-[100px] opacity-20 -mr-32 -mt-32"></div>
             
             <div class="relative z-10">
-                <div class="text-3xl font-black tracking-tighter mb-1">Optimizi<span class="text-red-500">.Audit</span></div>
+                <div class="text-3xl font-black tracking-tighter mb-1">Optimizi<span class="text-red-500">.Anlık Kayıp</span></div>
                 <div class="text-[10px] uppercase tracking-[4px] text-slate-400">Energy Loss Detection</div>
                 
                 <div class="mt-20 space-y-8">
@@ -1053,4 +1053,5 @@
   <script src="guard.js?v=2"></script>
 </body>
 </html>
+
 
