--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Enerji Kayıp ve Kaçak Analizi (ISO 12241)</title>
+<title>Enerji Kayıp ve Kaçak Analizi</title>
 <meta name="description" content="İşletmenizdeki yalıtımsız yüzeylerden kaynaklanan yıllık finansal kaybı hesaplayın.">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -1053,5 +1053,6 @@
   <script src="guard.js?v=2"></script>
 </body>
 </html>
+
 
 
