--- a/track.html
+++ b/track.html
@@ -155,7 +155,9 @@
                 startMoment = new Date(parts[0], parts[1]-1, parts[2], parts[3], parts[4]);
             }
         }
-        document.getElementById('startDate').innerText = startMoment.toLocaleDateString('tr-TR', { 
+        
+        // DÜZELTME BURADA YAPILDI: toLocaleDateString -> toLocaleString
+        document.getElementById('startDate').innerText = startMoment.toLocaleString('tr-TR', { 
             day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit' 
         });
 
