--- a/track.html
+++ b/track.html
@@ -18,7 +18,7 @@
         .animate-pulse-fast { animation: pulse-red 2s cubic-bezier(0.4, 0, 0.6, 1) infinite; }
     </style>
 </head>
-<body class="h-screen flex flex-col items-center justify-between p-4 relative">
+<body class="h-[100dvh] flex flex-col items-center justify-between p-4 relative">
 
     <div class="absolute inset-0 z-0 overflow-hidden pointer-events-none">
         <div class="absolute top-0 left-1/2 -translate-x-1/2 w-[500px] h-[500px] bg-red-600 rounded-full blur-[120px] opacity-20"></div>
@@ -152,14 +152,26 @@
         if (dateStr) {
             const parts = dateStr.split('-'); 
             if (parts.length >= 5) {
-                startMoment = new Date(parts[0], parts[1]-1, parts[2], parts[3], parts[4]);
+                // ParseInt ekleyerek sayıya çevirmeyi garanti ediyoruz
+                startMoment = new Date(
+                    parseInt(parts[0]), 
+                    parseInt(parts[1])-1, 
+                    parseInt(parts[2]), 
+                    parseInt(parts[3]), 
+                    parseInt(parts[4])
+                );
             }
         }
         
-        // DÜZELTME BURADA YAPILDI: toLocaleDateString -> toLocaleString
-        document.getElementById('startDate').innerText = startMoment.toLocaleString('tr-TR', { 
-            day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit' 
-        });
+        // MANUEL FORMATLAMA (Tarayıcı bağımsız çözüm)
+        const trMonths = ["Ocak", "Şubat", "Mart", "Nisan", "Mayıs", "Haziran", "Temmuz", "Ağustos", "Eylül", "Ekim", "Kasım", "Aralık"];
+        const day = startMoment.getDate();
+        const month = trMonths[startMoment.getMonth()];
+        const year = startMoment.getFullYear();
+        const hour = String(startMoment.getHours()).padStart(2, '0');
+        const minute = String(startMoment.getMinutes()).padStart(2, '0');
+
+        document.getElementById('startDate').innerText = `${day} ${month} ${year} ${hour}:${minute}`;
 
         // --- SAYAÇ MOTORU ---
         const counterEl = document.getElementById('counter');
