--- a/track.html
+++ b/track.html
@@ -26,7 +26,7 @@
 
     <div class="z-10 w-full max-w-md flex justify-between items-center opacity-80 mt-2">
         <div>
-            <h1 class="text-xl font-black tracking-tight text-white">Optimizi<span class="text-red-500">.Track</span></h1>
+            <h1 class="text-xl font-black tracking-tight text-white">Optimizi<span class="text-red-500">.Anlık Kayıp</span></h1>
             <p id="clientName" class="text-xs font-bold text-slate-400 uppercase tracking-widest mt-0.5">Yükleniyor...</p>
         </div>
         <div class="bg-slate-800/50 p-2 rounded-xl border border-white/10">
@@ -210,3 +210,4 @@
     </script>
 </body>
 </html>
+
