--- a/tool/chiller-roi.html
+++ b/tool/chiller-roi.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Chiller.Roi</title>
+<title>Chiller Sistemleri Amortisman Hesaplama</title>
 <meta name="description" content="Profesyonel Chiller yalıtım, yoğuşma riski ve ROI analizi.">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -1072,3 +1072,4 @@
   <script src="guard.js?v=2"></script>
 </body>
 </html>
+
