--- a/tool/chiller-roi.html
+++ b/tool/chiller-roi.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Optimizi | Chiller Energy Audit</title>
+<title>Chiller Sistemleri Amortisman Hesaplama</title>
 <meta name="description" content="Chiller ve soğutma hatları yalıtım karlılık analizi.">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -841,5 +841,7 @@
         setTimeout(()=>{ window.print(); }, 500);
     }
 </script>
+  <script src="guard.js?v=2"></script>
 </body>
 </html>
+
