--- a/endustriyel-enerji-kaybi-hesaplama.html
+++ b/endustriyel-enerji-kaybi-hesaplama.html
@@ -199,6 +199,28 @@
                     </div>
                 </a>
 
+                <a href="tool/yalitim-performans.html" class="carousel-card group cursor-pointer block">
+                    <div class="spotlight-card p-8 border-t-4 !border-t-red-500">
+                        <div class="relative z-10">
+                            <div class="flex justify-between items-start mb-6">
+                                <div class="w-14 h-14 rounded-2xl bg-red-500/20 text-red-400 flex items-center justify-center border border-red-500/30">
+                                    <i data-lucide="scan-line" class="w-7 h-7"></i>
+                                </div>
+                                <span class="bg-red-500/10 text-red-400 text-[10px] font-bold px-2 py-1 rounded border border-red-500/20">YENİ</span>
+                            </div>
+                            <h3 class="text-2xl font-bold mb-3 text-white">Optimum Kalınlık</h3>
+                            <p class="text-sm text-slate-400 mb-8 leading-relaxed">
+                                İzolasyon dizaynı için dolgu malzemelerini kıyaslayın ve en doğru seçeneği rapor halinde sunun.
+                            </p>
+                        </div>
+                        <div class="relative z-10 mt-auto">
+                            <div class="w-full py-3 rounded-xl bg-red-600 hover:bg-red-500 text-white font-bold flex items-center justify-center gap-2 transition-all shadow-lg shadow-red-500/20">
+                                <span>HESAPLA</span> <i data-lucide="arrow-right" class="w-4 h-4"></i>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="tool/chiller-roi.html" class="carousel-card group cursor-pointer block">
                     <div class="spotlight-card p-8 border-t-4 !border-t-cyan-500">
                         <div class="relative z-10">
@@ -211,6 +233,28 @@
                             <h3 class="text-2xl font-bold mb-3 text-white">Soğutma & Chiller ROI</h3>
                             <p class="text-sm text-slate-400 mb-8 leading-relaxed">
                                 Soğutma hatlarında yoğuşma kontrolü ve yalıtım amortisman hesabı.
+                            </p>
+                        </div>
+                        <div class="relative z-10 mt-auto">
+                            <div class="w-full py-3 rounded-xl bg-cyan-600 hover:bg-cyan-500 text-white font-bold flex items-center justify-center gap-2 transition-all shadow-lg shadow-cyan-500/20">
+                                <span>HESAPLA</span> <i data-lucide="arrow-right" class="w-4 h-4"></i>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                 <a href="tool/yogusma-hesaplama.html" class="carousel-card group cursor-pointer block">
+                    <div class="spotlight-card p-8 border-t-4 !border-t-cyan-500">
+                        <div class="relative z-10">
+                            <div class="flex justify-between items-start mb-6">
+                                <div class="w-14 h-14 rounded-2xl bg-cyan-500/20 text-cyan-400 flex items-center justify-center border border-cyan-500/30">
+                                    <i data-lucide="thermometer-snowflake" class="w-7 h-7"></i>
+                                </div>
+                                <span class="bg-cyan-500/10 text-cyan-400 text-[10px] font-bold px-2 py-1 rounded border border-cyan-500/20">YENİ</span>
+                            </div>
+                            <h3 class="text-2xl font-bold mb-3 text-white">Yoğuşma Kontrol Hesaplaması</h3>
+                            <p class="text-sm text-slate-400 mb-8 leading-relaxed">
+                                Soğutma hatlarında yoğuşma kontrolü ve uygun yalıtım hesabı.
                             </p>
                         </div>
                         <div class="relative z-10 mt-auto">
@@ -359,3 +403,4 @@
     </script>
 </body>
 </html>
+
