--- a/tool/yogusma-hesaplama.html
+++ b/tool/yogusma-hesaplama.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-
+<link rel="icon" href="../favicon.png" type="image/png">
 <script>
   tailwind.config = {
     theme: {
