--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -188,7 +188,7 @@
         </div>
 
         <div class="grid grid-cols-1 xl:grid-cols-12 gap-8 items-start">
-            <div class="xl:col-span-4 space-y-6">
+            <div class="xl:col-span-4 space-y-6 overflow-y-auto max-h-[calc(100vh-12rem)]">
                 <div class="glass-card p-6 rounded-2xl">
                    <h3 class="text-red-500 dark:text-red-400 text-xs font-bold uppercase mb-4 flex items-center gap-2"><i data-lucide="briefcase" class="w-4 h-4"></i> Firma & Proje</h3>
                    <div class="space-y-4">
