--- a/tool/deneme.html
+++ b/tool/deneme.html
@@ -569,8 +569,7 @@
     // Kimse bu hesaplama mantığını göremez veya kopyalayamaz!
     
     // 🔥 ÖNEMLİ: Aşağıdaki satırı Google Apps Script URL'iniz ile değiştirin (Adım 5)
-    const API_URL = "https://script.google.com/macros/s/AKfycby8NK-oA7ZWrsfywEpW7NQBo8H7pwqIcknbp0bafqbDV0c_HYzQ140-HitGKHQTr6cE/exec
-";
+const API_URL = "https://script.google.com/macros/s/AKfycby8NK-oA7ZWrsfywEpW7NQBo8H7pwqIcknbp0bafqbDV0c_HYzQ140-HitGKHQTr6cE/exec";
     
     // Sadece UI için gerekli DN değerleri (hesaplama için değil, sadece dropdown için)
     const PIPES={15:21.3,20:26.7,25:33.4,32:42.2,40:48.3,50:60.3,65:73.0,80:88.9,100:114.3,125:141.3,150:168.3,200:219.1,250:273.0,300:323.9,350:355.6,400:406.4,500:508.0};
