--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -14,11 +14,12 @@
 </head>
 <body class="antialiased" onload="initApp()">
 <script>
-    // ⚠️ GÜVENLİK AYARLARI
-   // Güvenlik Bilgileri (Maskelenmiş)
+// --- GÜVENLİK AYARLARI ---
 const _0x4a2b = ["b251cmd1bmVyMTk5OQ==", "aHR0cHM6Ly9zY3JpcHQuZ29vZ2xlLmNvbS9tYWNyb3Mvcy9BS2Z5Y2J5OE5LLW9BN1pXcnNmeUVwVzdOUUJvOEg3cHdxSWNrbmJwMGJhZnFiRFYwY19IWXpRMTQwLUhpdEdLSFFUcjZjRS9leGVj"];
-const OZEL_ANAHTAR = atob(_0x4a2b[0]); 
-const API_URL = atob(_0x4a2b[1]);
+
+// Bu değişkenleri sakın silme, fonksiyonlar bunları kullanıyor
+const OZEL_ANAHTAR = window.atob(_0x4a2b[0]); 
+const API_URL = window.atob(_0x4a2b[1]);
 
     let LIST=[],FX={USD:34.50,EUR:36.50,GBP:43.20,TL:1.0},currImg=null,editingIndex=null;
     let currentSurfaces = []; 
@@ -162,4 +163,5 @@ const API_URL = atob(_0x4a2b[1]);
 </script>
 </body>
 </html>
+
 
