--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr" class="dark">
 <head>
@@ -565,10 +564,7 @@
     }
 
     
-// Güvenlik Bilgileri (Maskelenmiş)
-const _0x4a2b = ["b251cmd1bmVyMTk5OQ==", "aHR0cHM6Ly9zY3JpcHQuZ29vZ2xlLmNvbS9tYWNyb3Mvcy9BS2Z5Y2J5OE5LLW9BN1pXcnNmeUVwVzdOUUJvOEg3cHdxSWNrbmJwMGJhZnFiRFYwY19IWXpRMTQwLUhpdEdLSFFUcjZjRS9leGVj"];
-const OZEL_ANAHTAR = atob(_0x4a2b[0]); 
-const API_URL = atob(_0x4a2b[1]);
+const API_URL = "https://script.google.com/macros/s/AKfycby8NK-oA7ZWrsfywEpW7NQBo8H7pwqIcknbp0bafqbDV0c_HYzQ140-HitGKHQTr6cE/exec";
     
     // Sadece UI için gerekli DN değerleri (hesaplama için değil, sadece dropdown için)
     const PIPES={15:21.3,20:26.7,25:33.4,32:42.2,40:48.3,50:60.3,65:73.0,80:88.9,100:114.3,125:141.3,150:168.3,200:219.1,250:273.0,300:323.9,350:355.6,400:406.4,500:508.0};
