--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button onclick="toggleLang()" class="flex items-center gap-2 px-4 py-2 rounded-full bg-slate-800/80 hover:bg-slate-700 text-white transition border border-slate-600 shadow-lg shadow-black/20">
                 <span id="langFlag" class="text-base">🇬🇧</span><span id="langText" class="text-xs font-bold hidden sm:inline">EN</span>
             </button>
-            <a href="endustriyel-enerji-kaybi-hesaplama.html" class="hidden sm:flex items-center gap-2 px-6 py-2.5 bg-gradient-to-r from-indigo-600 via-purple-600 to-orange-500 hover:from-indigo-500 hover:to-orange-400 text-white rounded-full font-bold transition shadow-lg shadow-indigo-500/25 active:scale-95">
-                <span data-i18n="btn_tools">Araçları İncele</span><i data-lucide="arrow-right" class="w-4 h-4"></i>
+            <a href="login.html" class="hidden sm:flex items-center gap-2 px-6 py-2.5 bg-gradient-to-r from-indigo-600 via-purple-600 to-orange-500 hover:from-indigo-500 hover:to-orange-400 text-white rounded-full font-bold transition shadow-lg shadow-indigo-500/25 active:scale-95">
+                <span data-i18n="btn_tools">Giriş Yap</span><i data-lucide="arrow-right" class="w-4 h-4"></i>
             </a>
         </div>
     </div>
@@ -438,6 +438,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
+
 
 
 
